trunk/Archive2/d8/f1133f18b00d1d/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:7:12: warning: variable length arrays are a C99 feature [-Wvla-extension]
    int out[x+y];
           ^
main.cpp:18:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
main.cpp:21:14: warning: variable length arrays are a C99 feature [-Wvla-extension]
    int first[n/2];
             ^
main.cpp:22:15: warning: variable length arrays are a C99 feature [-Wvla-extension]
    int second[n - (n/2)];
              ^
main.cpp:23:23: error: expected expression
    if(n==1) return a[];
                      ^
main.cpp:28:9: error: use of undeclared identifier 'last'
        last[i]=a[i];
        ^
main.cpp:30:53: error: use of undeclared identifier 'last'
    return merge(mergeSort(first,n/2),n/2,mergeSort(last,n/2-1),n/2-1);
                                                    ^
main.cpp:39:14: error: array type 'int [7]' is not assignable
    unsorted = {1,2,3,2,6,3,1};
    ~~~~~~~~ ^
main.cpp:40:12: error: array type 'int [7]' is not assignable
    sorted = mergeSort(unsorted,7);
    ~~~~~~ ^
4 warnings and 5 errors generated.
